# e_commerce

./: README.md  pyproject.toml
app/: auth.py  database.py  main.py  models.py  routes.py
tests/: test_routes.py
