[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["igor-personal <icaetanodiniz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-bcrypt = "^1.0.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
